<resources>
    <string name="app_name">Monitoring Walkers</string>
    <string name="action_settings">Settings</string>
    <string name="login_btn_text">Iniciar sesion</string>
    <string name="login_hint_email">Correo</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="register_hint_name">Nombre</string>
    <string name="register_hint_last_name">Apellidos</string>
    <string name="register_hint_email">Correo</string>
    <string name="register_hint_password">Contraseña</string>
    <string name="register_hint_confirm_password">Confirmar contraseña</string>
    <string name="register_hint_treatment">Tratamiento</string>
    <string name="register_hint_age">Edad</string>
    <string name="register_btn_text">Registrar</string>
    <string name="email_error">Correo invalido</string>
    <string name="password_error">Contraseña invalida</string>
    <string name="error_title">Error</string>
    <string name="error_message">Ha ocurrido un error inesperado</string>
    <string name="error_message_login">Correo o contraseña inválida</string>
    <string name="error_message_register">Faltan detallar campos</string>
    <string name="error_message_register_same_passwords">Las contraseñas no coinciden</string>
    <string name="accept_button_text">OK</string>
    <string name="title_activity_list_doctors">ListDoctorsActivity</string>
    <string name="no_items_text">No hay elementos disponibles</string>
    <string name="logout">Logout</string>
    <string name="logout_btn_text">Cerrar sesion</string>
    <string name="welcome_txt">Bienvenido</string>
    <string name="title_activity_list_patients">ListPatientsActivity</string>
    <string name="title_activity_list_therapists">ListTherapistsActivity</string>
    <string name="please_wait_txt">Espere por favor</string>
    <string name="loading_txt">Cargando…</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="patients">Mis pacientes</string>
    <string name="therapist">Mis terapeutas</string>
    <string name="doctors">Medicos</string>
    <string name="add_therapist">Agregar terapeuta</string>
    <string name="add_patient">Agregar paciente</string>
    <string name="add_doctor">Agregar médico</string>
    <string name="register_weight_age">Peso</string>
    <string name="no_txt">No</string>
    <string name="yes_txt">Si</string>
    <string name="warning_title">Cuidado!</string>
    <string name="warning_message">Estas seguro que deseas eliminar?</string>
    <string name="detail_doctor">Detalle del Médico</string>
    <string name="detail_therapist">Detalle del Terapeuta</string>
    <string name="detail_patient">Detalle del Paciente</string>
    <string name="register_hint_speciality">Especialidad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Images-->
    <string name="img_patient">https://cdn2.iconfinder.com/data/icons/covid-19-filled/64/virus-18-512.png</string>
    <string name="img_therapist">https://cdn3.iconfinder.com/data/icons/healthcare-medical-lilac-series-vol-1/256/DOCTOR-512.png</string>
    <string name="img_doctor">https://cdn3.iconfinder.com/data/icons/healthcare-medical-lilac-series-vol-1/256/DOCTOR-512.png</string>
</resources>
